Fixed facilitator name wrapping

--- a/app/assets/stylesheets/pages/assessments.sass
+++ b/app/assets/stylesheets/pages/assessments.sass
@@ -121,6 +121,9 @@
 
 .row.row-assessment-addon
   margin-top: -15px
+  .tooltip
+    .name
+      white-space: nowrap
 
   .col-md-1
     min-height: 42px !important
